# devcleaner

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  greetings.yml  linter.yml  tests.yml
deployment/: getLatest.sh
deployment/chocolatey/: chocolateyinstall.ps1.template  devcleaner.nuspec.template  nmkill.nuspec.template
deployment/homebrew/: devcleaner.rb.template  nmkill.rb.template
deployment/scoop/: devcleaner.json.template  nmkill.json.template
src/: banner.rs  cli.rs  lib.rs  main.rs
src/app/: key_binding.rs  mod.rs  models.rs  project.rs
src/event/: events.rs  key.rs
src/handlers/: mod.rs
src/operations/: mod.rs
src/ui/: control_panel.rs  help.rs  mod.rs  overview.rs  utils.rs
tests/: search.rs
