[package]
name = "nmkill"
version = "0.1.0"
authors = ["Yuniel Acosta Pérez <yunielacosta738@gmail.com>"]
description = "A tool to search for node_modules an clean the projects selected"
keywords = ["node_modules", "clean", "node", "npm", "package", "manager"]
categories = ["node", "npm", "package", "manager"]
repository = "https://github.com/yacosta738/nmkill"
homepage = "https://github.com/yacosta738/nmkill"
readme = "README.md"
license = "MIT"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
clap = "2.33.3"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
dirs = "4.0.0"
human-panic = "1.0"
backtrace = "0.3"
glob = "0.3.0"
rayon = "1.5.1"

#dev-dependencies
[dev-dependencies]
rand = "0.8.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bin]]
bench = false
path = "src/main.rs"
name = "nmkill"

[profile.release]
lto = true
codegen-units = 1