[package]
name = "devcleaner"
version = "0.1.0"
authors = ["Yuniel Acosta Pérez <yunielacosta738@gmail.com>"]
description = "A tool to search for node_modules an clean the projects selected"
keywords = ["clean", "node", "npm", "package", "manager"]
categories = ["node", "npm", "package", "manager"]
repository = "https://github.com/DevCleaner/devcleaner"
homepage = "https://github.com/DevCleaner/devcleaner"
readme = "README.md"
license = "MIT"
exclude = ["assets/*", ".github", "Makefile.toml", "CONTRIBUTING.md", "*.log", "tags"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
clap = "2.34.0"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.7", features = ["time"] }
dirs = "4.0.0"
human-panic = "1.0"
backtrace = "0.3"
glob = "0.3.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
textwrap = "0.14"
anyhow = "1.0"
rand = "0.8.4"
human_bytes = "0.3"

#dev-dependencies
[dev-dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bin]]
bench = false
path = "src/main.rs"
name = "devcleaner"

[profile.release]
lto = true
codegen-units = 1